--- a/src/components/video-element/video-element.scss
+++ b/src/components/video-element/video-element.scss
@@ -1,10 +1,3 @@
-vuplay-video {
-    width: 100%;
-    height: 100%;
-    video {
-        width: 100%;
-        height: 100%;
-        display: block;
-        background: black;
-    }
+video-element {
+    display: block;
 }
