move labels out of scrub components

--- a/src/components/scrub-bar/scrub-bar.scss
+++ b/src/components/scrub-bar/scrub-bar.scss
@@ -1,6 +1,6 @@
 scrub-bar {
     $padding: 20px;
-    display: block;
+    display: inline-block;
     progress {
         margin: $padding;
         position: relative;
