--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -1,3 +1,10 @@
+video-player {
+    label {
+        display: block;
+        font-family: Arial;
+    }
+}
+
 video-player:-webkit-full-screen {
     display: block;
     width: 100%;
