--- a/src/components/volume-bar/volume-bar.scss
+++ b/src/components/volume-bar/volume-bar.scss
@@ -1,6 +1,6 @@
 volume-bar {
     $padding: 20px;
-    display: block;
+    display: inline-block;
     progress {
         margin: $padding;
         position: relative;
