--- a/src/components/video-element/video-element.scss
+++ b/src/components/video-element/video-element.scss
@@ -1,3 +1,11 @@
 video-element {
     display: block;
+    width: 100%;
+    height: 100%;
+    video {
+        background: black;
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
 }
