--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -1,7 +1,39 @@
 video-player {
-    label {
-        display: block;
-        font-family: Arial;
+    display: block;
+    position: relative;
+    scrub-bar {
+        position: absolute;
+        bottom: 60px;
+        left: 0;
+        right: 0;
+    }
+    .toolbar-bottom {
+        background: rgba(255, 255, 255, 0.3);
+        padding: 10px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        & > * {
+            vertical-align: middle;
+            display: inline-block;
+        }
+    }
+    button {
+        -webkit-appearance: none;
+        border: transparent;
+        background: transparent;
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+    }
+
+    volume-bar {
+        width: 150px;
+    }
+
+    fullscreen-button {
+        float: right;
     }
 }
 
