--- a/src/components/volume-bar/volume-bar.scss
+++ b/src/components/volume-bar/volume-bar.scss
@@ -1,19 +1,8 @@
 volume-bar {
-    $padding: 20px;
-    display: inline-block;
     progress {
-        margin: $padding;
         position: relative;
         display: block;
-        &::after {
-            content: '';
-            display: block;
-            position: absolute;
-            border: 1px solid #eee;
-            right: -$padding;
-            bottom: -$padding;
-            left: -$padding;
-            top: -$padding;
-        }
+        width: 100%;
+        height: 30px;
     }
 }
