added poster, improved support for ios

--- a/src/components/time-label/time-label.scss
+++ b/src/components/time-label/time-label.scss
@@ -1,16 +1,19 @@
 time-label {
     display: block;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    background: #fff;
-    border-radius: 5px;
+    font-family: Arial, sans-serif;
+    font-size: 10px;
     margin: 0 5px;
-    padding: 5px;
+    padding: 14px 0;
     height: 30px;
     box-sizing: border-box;
     pointer-events: none; // disable cursor highlighting
     span {
         display: inline-block;
-        width: 10px;
+        width: 7px;
         text-align: center;
+        color: #fff;
+        &.divider {
+            width: 3px;
+        }
     }
 }
