--- a/src/components/control-bar/control-bar.scss
+++ b/src/components/control-bar/control-bar.scss
@@ -1,18 +1,22 @@
 control-bar {
     display: block;
-    background: rgba(255, 255, 255, 0.3);
-    padding: 10px;
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
+    
+    background: rgba(255, 255, 255, 0.3);
+    padding: 10px;
     opacity: 0;
     transition: opacity 0.5s;
+
+    // Make all controls float left
     & > * {
         float: left;
         vertical-align: middle;
     }
-    *:hover > & {
+    // Force visibility when hovering over element
+    &:hover {
         opacity: 1 !important;
     }
 }
