added keyboard controls and aria data to volume bar

--- a/src/components/volume-bar/volume-bar.scss
+++ b/src/components/volume-bar/volume-bar.scss
@@ -3,7 +3,8 @@ volume-bar {
         position: relative;
         display: block;
         width: 100%;
-        height: 30px;
+        height: 20px;
+        margin-top: 10px;
         background-color: black;
     }
 }
