added basic subtitles functionality

--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -20,7 +20,7 @@ video-player {
         width: 100px;
     }
 
-    fullscreen-button {
+    subtitles-button, fullscreen-button {
         float: right;
     }
 }
