--- a/src/components/video-element/video-element.scss
+++ b/src/components/video-element/video-element.scss
@@ -7,5 +7,8 @@ video-element {
         display: block;
         width: 100%;
         height: 100%;
+        &::-webkit-media-text-track-container {
+            display: none;
+        }
     }
 }
