remove video-element element

--- a/src/components/video-player/video-player.scss
+++ b/src/components/video-player/video-player.scss
@@ -1,6 +1,17 @@
 video-player {
     display: block;
     position: relative;
+
+    video {
+        background: black;
+        display: block;
+        width: 100%;
+        height: 100%;
+        &::-webkit-media-text-track-container {
+            display: none;
+        }
+    }
+
     scrub-bar {
         position: absolute;
         bottom: 60px;
